# sg-grep

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
public/: splash.html
src/: App.tsx  CustomScrollbar.tsx  FileList.tsx  LogPane.tsx  MenuBar.tsx  Modal.tsx  PaneTabLabel.tsx  Settings.tsx  StatusBar.tsx  Toggle.tsx  UpdateDialog.tsx  index.css  logParser.ts  queryParser.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
